# pycapsule

./: README.md  README.rst  converter.py  pyproject.toml
pycapsule/: converter.py  record_reader.py  requirements.txt  types.py  utils.py
pycapsule/mne/: io.py
tests/: test_pycapsule.py
